--- a/main.html
+++ b/main.html
@@ -37,11 +37,11 @@
 			<section class="home">
 				<h3>Home</h3>
 				<ul>
-					<li>Lorem ipsum</li>
-					<li>Lorem ipsum</li>
-					<li>Lorem ipsum</li>
-					<li>Lorem ipsum</li>
-					<li>Lorem ipsum</li>
+					<li><a>Lorem ipsum</a></li>
+					<li><a>Lorem ipsum</a></li>
+					<li><a>Lorem ipsum</a></li>
+					<li><a>Lorem ipsum</a></li>
+					<li><a>Lorem ipsum</a></li>
 				</ul>
 				
 			</section>
