--- a/main.html
+++ b/main.html
@@ -37,11 +37,11 @@
 			<section class="home">
 				<h3>Home</h3>
 				<ul>
-					<li><a>Lorem ipsum</a></li>
-					<li><a>Lorem ipsum</a></li>
-					<li><a>Lorem ipsum</a></li>
-					<li><a>Lorem ipsum</a></li>
-					<li><a>Lorem ipsum</a></li>
+					<li><a href="#">Lorem ipsum</a></li>
+					<li><a href="#">Lorem ipsum</a></li>
+					<li><a href="#">Lorem ipsum</a></li>
+					<li><a href="#">Lorem ipsum</a></li>
+					<li><a href="#">Lorem ipsum</a></li>
 				</ul>
 				
 			</section>
@@ -49,44 +49,44 @@
 			<section class="about">
 				<h3>About</h3>
 				<ul>
-					<li>Lorem ipsum</li>
-					<li>Lorem ipsum</li>
-					<li>Lorem ipsum</li>
-					<li>Lorem ipsum</li>
-					<li>Lorem ipsum</li>
+					<li><a href="#">Lorem ipsum</a></li>
+					<li><a href="#">Lorem ipsum</a></li>
+					<li><a href="#">Lorem ipsum</a></li>
+					<li><a href="#">Lorem ipsum</a></li>
+					<li><a href="#">Lorem ipsum</a></li>
 				</ul>
 			</section>
 
 			<section class="links">
 				<h3>links</h3>
 				<ul>
-					<li>Lorem ipsum</li>
-					<li>Lorem ipsum</li>
-					<li>Lorem ipsum</li>
-					<li>Lorem ipsum</li>
-					<li>Lorem ipsum</li>
+					<li><a href="#">Lorem ipsum</a></li>
+					<li><a href="#">Lorem ipsum</a></li>
+					<li><a href="#">Lorem ipsum</a></li>
+					<li><a href="#">Lorem ipsum</a></li>
+					<li><a href="#">Lorem ipsum</a></li>
 				</ul>
 			</section>
 
 			<section class="contact">
 				<h3>Contacts</h3>
 				<ul>
-					<li class="contactnumber">8879887262</li>
-					<li>Lorem ipsum</li>
-					<li>Lorem ipsum</li>
-					<li>Lorem ipsum</li>
-					<li>Lorem ipsum</li>
+					<li>8879887262</li>
+					<li><a>Lorem ipsum</a></li>
+					<li><a>Lorem ipsum</a></li>
+					<li><a>Lorem ipsum</a></li>
+					<li><a>Lorem ipsum</a></li>
 				</ul>
 			</section>
 
 			<section class="service">
 				<h3>Services</h3>
 				<ul>
-					<li>Lorem ipsum</li>
-					<li>Lorem ipsum</li>
-					<li>Lorem ipsum</li>
-					<li>Lorem ipsum</li>
-					<li>Lorem ipsum</li>
+					<li><a href="#">Lorem ipsum</a></li>
+					<li><a href="#">Lorem ipsum</a></li>
+					<li><a href="#">Lorem ipsum</a></li>
+					<li><a href="#">Lorem ipsum</a></li>
+					<li><a href="#">Lorem ipsum</a></li>
 				</ul>
 			</section>
         </div>
