--- a/main.html
+++ b/main.html
@@ -22,12 +22,13 @@
           </div>
           <div class="media-icons">
             <!-- your code here -->
-			  <i class="fa-brands fa-facebook fa-3x" style="color: #0c4cbb;"></i>
-			  <i class="fa-brands fa-square-twitter fa-3x" style="color: #0f9ee6;" fa-3x></i>
-			  <i class="fa-brands fa-square-instagram fa-3x" style="color: #df2a8b;"></i>
-			  <i class="fa-brands fa-linkedin fa-3x" style="color: #0a5f94;"></i>
-			  <i class="fa-brands fa-youtube fa-3x" style="color: #d11a1a;"></i>
-			  
+			  <a href="#">
+				  <i class="fa-brands fa-facebook fa-3x" style="color: #0c4cbb;"></i>
+				  <i class="fa-brands fa-square-twitter fa-3x" style="color: #0f9ee6;" fa-3x></i>
+				  <i class="fa-brands fa-square-instagram fa-3x" style="color: #df2a8b;"></i>
+				  <i class="fa-brands fa-linkedin fa-3x" style="color: #0a5f94;"></i>
+				  <i class="fa-brands fa-youtube fa-3x" style="color: #d11a1a;"></i>
+			  </a>
 			  
           </div>
         </div>
