--- a/main.html
+++ b/main.html
@@ -59,7 +59,7 @@
 			</section>
 
 			<section class="links">
-				<h3>links</h3>
+				<h3>Links</h3>
 				<ul>
 					<li><a href="#">Lorem ipsum</a></li>
 					<li><a href="#">Lorem ipsum</a></li>
