--- a/main.html
+++ b/main.html
@@ -61,11 +61,11 @@
 			<section class="links">
 				<h3>Links</h3>
 				<ul>
-					<li><a href="#">Lorem ipsum</a></li>
-					<li><a href="#">Lorem ipsum</a></li>
-					<li><a href="#">Lorem ipsum</a></li>
-					<li><a href="#">Lorem ipsum</a></li>
-					<li><a href="#">Lorem ipsum</a></li>
+					<li>Lorem ipsum</li>
+					<li>Lorem ipsum</li>
+					<li>Lorem ipsum</li>
+					<li>Lorem ipsum</li>
+					<li>Lorem ipsum</li>
 				</ul>
 			</section>
 
